# HIP-CPU-vibe

./: AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md
examples/vadd_hip/: vadd_hip.cpp
include/hip/: hip_api.h  hip_defines.h
src/: CMakeLists.txt
src/include/hip/detail/: api.hpp  flat_combiner.hpp  runtime.hpp  tile.hpp
tests/: CMakeLists.txt  hip_device_synchronize.cpp  hip_host_multithread_hipstream.cpp
tools/cmake/: tbb_compat_check.cpp
